@@ -57,4 +57,13 @@ EOF
     map.decode(0x9).should eql(0x73)
   end
 
+  specify "should correctly load a cmap that uses the beginbfrange operator" do
+    filename = File.dirname(__FILE__) + "/data/cmap_with_bfrange.txt"
+    map = PDF::Reader::CMap.new(File.read(filename))
+    map.decode(0x16C9).should eql(0x4F38) # mapped with the bfchar operator
+    map.decode(0x0003).should eql(0x0020) # mapped with the bfrange operator
+    map.decode(0x0004).should eql(0x0020+1) # mapped with the bfrange operator
+    map.decode(0x0005).should eql(0x0020+2) # mapped with the bfrange operator
+  end
+
 end
